# playground-2024-11

./: LICENSE  README.md  pyproject.toml
otamas_playground/: flatten_dictionary.py
tests/: test_flatten.py
