[tool.poetry]
name = "otamas-playground"
version = "0.1.0"
description = ""
authors = ["Otto Tamas <otto.tamas.it@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
ruff = "^0.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
